--- a/destaques.html
+++ b/destaques.html
@@ -212,56 +212,67 @@ nav a:hover {
             <div class="galeria">
               
                 <div class="single-galeria">
-                    <img src="img/alunosD.jpeg" alt="">
+                    <img src="img/j.jpeg" alt="">
                     <div class="info">
-                        <h1>Título</h1>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam labore.</p>
-                        <a href="#">Ver Mais</a>
+                        <h1>João Antônio Silva</h1>
+                        <p>
+                            Aluno Destaque do 1A Médias de notas: 8,5
+                        </p>
                     </div>
                 </div>
 
                 <div class="single-galeria">
-                    <img src="img/alunosD.jpeg" alt="">
+                    <img src="img/e.jpeg" alt="">
                     <div class="info">
-                        <h1>Título</h1>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam labore.</p>
-                        <a href="#">Ver Mais</a>
+                        <h1>Eduarda Amorim</h1>
+                        <p>
+                            Aluna Destaque do 1B
+                            Médias de notas: 9
+                        </p>
                     </div>
                 </div>
 
                 <div class="single-galeria">
-                    <img src="img/alunosD.jpeg" alt="">
+                    <img src="img/n.jpeg" alt="">
                     <div class="info">
-                        <h1>Título</h1>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam labore.</p>
-                        <a href="#">Ver Mais</a>
+                        <h1>Nícolas Godoy Soares</h1>
+                        <p>
+                            ALuno Destaque do 2A 
+                            Média de notas 7,5
+                        </p>
                     </div>
                 </div>
 
                 <div class="single-galeria">
-                    <img src="img/alunosD.jpeg" alt="">
+                    <img src="img/m.jpeg" alt="">
                     <div class="info">
-                        <h1>Título</h1>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam labore.</p>
-                        <a href="#">Ver Mais</a>
+                        <h1>Maria Andrade</h1>
+                        <p>
+                            Aluna Destaque do 2B
+                            Média de notas: 10
+                        </p>
                     </div>
                 </div>
 
                 <div class="single-galeria">
-                    <img src="img/alunosD.jpeg" alt="">
+                    <img src="img/x.jpeg" alt="">
                     <div class="info">
-                        <h1>Título</h1>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam labore.</p>
-                        <a href="#">Ver Mais</a>
+                        <h1>Matheus Xavier</h1>
+                        <p>
+                            Aluno Destaque do 3A 
+                            Média de notas: 9,5
+                        </p>
                     </div>
                 </div>
 
                 <div class="single-galeria">
-                    <img src="img/alunosD.jpeg" alt="">
+                    <img src="img/c.jpeg" alt="">
                     <div class="info">
-                        <h1>Título</h1>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam labore.</p>
-                        <a href="#">Ver Mais</a>
+                        <h1>Maria Joaquina Medsen</h1>
+                        <p>
+                            Aluna Destaque do 3B
+                            Média de notas: 10
+                        </p>
                     </div>
                 </div>
             </div>
