--- a/contato.html
+++ b/contato.html
@@ -103,14 +103,11 @@ nav a:hover {
     <br></br>
     <div class="contato">
     <h3>Telefone da Escola:</h3>
-    <p>(11) 00000-0000</p>
-    <h3>Telefone do Grêmio:</h3>
-    <p>(11) 00000-0000</p>
+    <p>(11) 4606-2013</p>
     <h3>Instagram da Escola:</h3>
-    <p>@peipagiossi</p>
+    <a href="https://www.instagram.com/peipagiossi/">@peipagiossi</a>
     <h3>Instagram do Grêmio:</h3>
-    <p></p>
-    <a href="https://www.instagram.com/peipagiossi/">@gremiopeipagiossi</a>
+    <a href="https://www.instagram.com/GremioPeiPagiossi/">@gremiopeipagiossi</a>
     <h3>Gmail:</h3>
     <p>GremioPeiPagiossi@gmail.com</p>
     <h3>Endereço:</h3>
