--- a/home.html
+++ b/home.html
@@ -174,7 +174,7 @@ redirectBoxes.forEach(box => {
 });
 
 // Recupera o nome do usuário armazenado no localStorage
-let nome = localStorage.getItem('ra');
+let nome = localStorage.getItem('nome');
 
 // Aguarda o carregamento completo do DOM
 document.addEventListener('DOMContentLoaded', () => {
