--- a/eventos.html
+++ b/eventos.html
@@ -132,22 +132,15 @@
         <div class="event-card">
             <img src="img/prova0.jpeg" alt="Café Literário">
             <h2>Provão Paulista (Avisos)</h2>
-            <p>Fique atento</p>
+            <p>Fique atento!</p>
         </div>
         <div class="event-card">
             <img src="img/prova1.jpeg" alt="Café Literário">
-            <h2>Provão Paulista 1ªSérie</h2>
-            <p>Encontros para compartilhar literatura e cultura com alunos e professores.</p>
+            <h2>Provão Paulista 1ª Série</h2>
         </div>
         <div class="event-card">
             <img src="img/prova2.jpeg" alt="Café Literário">
-            <h2>Provão Paulista 2ªSérie</h2>
-            <p>Encontros para compartilhar literatura e cultura com alunos e professores.</p>
-        </div>
-        <div class="event-card">
-            <img src="img/premios.jpeg" alt="Café Literário">
-            <h2>Show de Prêmios</h2>
-            <p>Encontros para compartilhar literatura e cultura com alunos e professores.</p>
+            <h2>Provão Paulista 2ª Série</h2>
         </div>
     </div>
     <footer>
