--- a/projetos.html
+++ b/projetos.html
@@ -129,27 +129,25 @@
         <div class="projeto-item">
             <img src="img/manifestacao.jpeg" alt="Manifestações Culturais">
             <h2>Manifestações Culturais</h2>
-            <p>Peças de teatro e teatro de fantoches.</p>
+            <p>As manifestações culturais refletem a riqueza e diversidade de nossa comunidade, promovendo o diálogo, a criatividade e a valorização das tradições. Através de danças, músicas, artes e celebrações, mantemos vivas as histórias e identidades que nos conectam como sociedade. Participe e celebre conosco a cultura que nos une!</p>
         </div>
         <div class="projeto-item">
             <img src="img/cafe.jpeg" alt="Café Literário">
             <h2>Café Literário</h2>
-            <p>Encontros literários com discussões de obras e apresentações culturais.</p>
+            <p>O Café Literário é um espaço de encontro e inspiração, onde alunos, professores e convidados compartilham suas experiências literárias e discutem temas ligados ao universo da leitura e da escrita. O evento promove a troca de ideias por meio de rodas de conversa, declamação de poesias, apresentações culturais e exposições de obras criativas. O Café Literário busca incentivar o hábito da leitura, valorizar talentos e aproximar a comunidade escolar do mundo literário.</p>
         </div>
         <div class="projeto-item">
             <img src="img/culminancia.jpeg" alt="Dia da Consciência Negra">
             <h2>culminãncia</h2>
-            <p>Comemorações e palestras para promover a igualdade racial e cultural.</p>
         </div>
         <div class="projeto-item">
             <img src="img/arraia.jpeg" alt="Dia da Consciência Negra">
             <h2>Arraiá Pagiossi</h2>
-            <p>Comemorações e palestras para promover a igualdade racial e cultural.</p>
         </div>
         <div class="projeto-item">
             <img src="img/passeio.jpeg" alt="Dia da Consciência Negra">
             <h2>Passeio Escolares</h2>
-            <p>Comemorações e palestras para promover a igualdade racial e cultural.</p>
+            <p>Passeios para faculdades, museus, parques e entre outros...</p>
         </div>
     </div>
     <footer>
