--- a/login.html
+++ b/login.html
@@ -80,8 +80,8 @@
 
             // Lista de usuários cadastrados
             const users = [
-                { username: "Usuario", password: "pagi123" },
-                { username: "admin", password: "admin123" }
+                { username: "Usuario", password: "usuario123" },
+                { username: "Admin", password: "admin123" }
             ];
 
             // Verifica se o usuário e a senha correspondem
